Fix white space issue on save

--- a/src/blocks/block-pricing-table-inner/styles/style.scss
+++ b/src/blocks/block-pricing-table-inner/styles/style.scss
@@ -117,6 +117,7 @@
 .editor-styles-wrapper [data-type="atomic-blocks/ab-pricing-table-description"] ul {
 	list-style-type: none;
 	display: block;
+	white-space: initial;
 }
 
 .ab-list-border-solid {
